--- a/app/src/main/res/layout/basic_object_row.xml
+++ b/app/src/main/res/layout/basic_object_row.xml
@@ -17,6 +17,7 @@
         android:id="@+id/txtMainText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_toRightOf="@id/imgLeftIcon"
         android:text="Name" />
 
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtMainText"
+        android:layout_margin="5dp"
         android:layout_toRightOf="@id/imgLeftIcon"
         android:text="Distance" />
 </RelativeLayout>
