Proof of concept stage continues.

--- a/app/src/main/res/layout/dialog_send_message.xml
+++ b/app/src/main/res/layout/dialog_send_message.xml
@@ -52,7 +52,7 @@
                     android:layout_height="225dp"
                     android:ems="10"
                     android:gravity="start|top"
-                    android:inputType="textMultiLine"
+                    android:inputType="textShortMessage|textMultiLine|textCapSentences"
                     android:singleLine="false" />
 
             </FrameLayout>
