--- a/app/src/main/res/layout/frag_trip_members.xml
+++ b/app/src/main/res/layout/frag_trip_members.xml
@@ -28,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="1dp"
+                android:nestedScrollingEnabled="false"
                 tools:layout_editor_absoluteY="1dp" />
 
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
